--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("../images/JavaScript.jpg");
+	background-image: url("../images/Javascript.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 	font-size: 18px;
